<resources>
    <string name="app_name">Vip-tjob</string>
    <string name="title_activity_oper">OperActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btn_register_info">註冊會員</string>
    <string name="your_name">姓名</string>
    <string name="tel">電話</string>
    <string name="account">帳號</string>
    <string name="identy">身分證字號</string>
    <string name="password">密碼</string>
    <string name="error_network_timeout">線線愈時</string>
    <string name="api_url">http://www.vip-tjob.com.tw</string>
    <string name="birthday">生日</string>
    <string name="email">電子郵件</string>
    <string name="last_name">姓</string>
    <string name="given_name">名</string>
    <string name="login">登錄</string>
    <string name="warn_request_account">帳號需填寫</string>
    <string name="warn_request_password">密碼欄需填寫</string>
</resources>
